force-app/main/default/objects/Account_Contract_Clause__c/Account_Contract_Clause__c.object-meta.xml
<CustomObject>
    <label>Account Contract Clause</label>
    <nameField>
        <label>Account Contract Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contract Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>