force-app/main/default/objects/Account_Contract_Clause__c/fields/Acc_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name__c</fullName>
    <description>Name is clickable</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Name__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>hyperlink of the Records</inlineHelpText>
    <label>Account Contract Clause Name</label>
    <type>Text</type>
</CustomField>