force-app/main/default/objects/Account_Contract_Clause__c/fields/Account_Contract__c.field-meta.xml
<CustomField>
    <fullName>Account_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Contract</label>
    <referenceTo>Account_Contract__c</referenceTo>
    <relationshipLabel>Account Contract Clauses</relationshipLabel>
    <relationshipName>Account_Contract_Clauses</relationshipName>
    <type>Lookup</type>
</CustomField>